--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html, body {
   font-family: 'Saira', sans-serif;
   font-size:16px;
   margin:2rem;
+  color:white;
+  background-color: black;
+
 }
 
 header {
@@ -23,7 +26,7 @@ h1 {
 
 .case, .case-selected{
   position: relative;
-  background: url("images/silver-closed.jpg") no-repeat;
+  background: url("images/silver-closed.gif") no-repeat;
   background-size: cover;
   height:7em;
   width: 100%;
@@ -35,7 +38,7 @@ h1 {
 
 .case-opened {
   position: relative;
-  background: url("images/silver-open.jpg") no-repeat;
+  background: url("images/silver-open.gif") no-repeat;
   background-size: contain;
   height:7em;
   width: 100%;
@@ -105,7 +108,7 @@ h1 {
 #mine, #offer {
   position: absolute;
   top: 5%;
-  border:1px solid black;
+  border:1px solid white;
   height: 8.5em;
   width:12%;
   text-align: center;
