--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@ html, body {
   font-size:16px;
   margin:2rem;
   color:white;
-  background-color: black;
 
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
 
 header {
   margin-bottom: 3rem;
@@ -27,7 +30,7 @@ h1 {
 .case, .case-selected{
   position: relative;
   background: url("images/silver-closed.gif") no-repeat;
-  background-size: cover;
+  background-size: 100%;
   height:7em;
   width: 100%;
 }
@@ -39,7 +42,7 @@ h1 {
 .case-opened {
   position: relative;
   background: url("images/silver-open.gif") no-repeat;
-  background-size: contain;
+  background-size: 100%;
   height:7em;
   width: 100%;
 }
