--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 html, body {
   font-family: 'Saira', sans-serif;
   font-size:16px;
@@ -7,16 +9,33 @@ html, body {
   background: #232526;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height:100vh;
+
 }
 
 
 header {
-  margin-bottom: 3rem;
+  margin-bottom: 7vh;
+}
+
+footer {
 }
 
 h1 {
   font-size:3rem;
   text-align: center;
+}
+
+h2 {
+  font-size:2vw;
+}
+
+.howie {
+  background-image: url('../images/howie.jpg');
+  background-size:cover;
+  background-repeat: no-repeat;
+  height:100%;
+  width:100%;
 }
 
 .row {
@@ -28,9 +47,13 @@ h1 {
   margin:0 auto;
 }
 
+.board-row {
+  margin-bottom:2rem;
+}
+
 .case, .case-selected{
   position: relative;
-  background: url("images/silver-closed.gif") no-repeat;
+  background: url("../images/silver-closed.gif") no-repeat;
   background-size: 100%;
   height:7em;
   width: 100%;
@@ -42,7 +65,8 @@ h1 {
 
 .case-opened {
   position: relative;
-  background: url("images/silver-open.gif") no-repeat;
+  top:1em;
+  background: url("../images/silver-open.gif") no-repeat;
   background-size: 100%;
   height:7em;
   width: 100%;
@@ -58,7 +82,7 @@ h1 {
 }
 
 .rectangle {
-  background-image: url("images/dollars.jpg");
+  background-image: url("../images/dollars.jpg");
   position: relative;
   width:100%;
   height:2em;
@@ -136,6 +160,20 @@ h1 {
   animation: blinker 1s linear infinite;
 }
 
+.media-background {
+  background-image: url("../images/dollars.jpg");
+  background-size:cover;
+  background-repeat:no-repeat;
+  position: relative;
+  width:100%;
+  height:auto;
+  margin-bottom:1em;
+  text-align:center;
+  color:black;
+  display:flex;
+  justify-content: space-evenly;
+}
+
 @keyframes blinker {
   50% { opacity: 0; }
 }
@@ -155,9 +193,55 @@ h1 {
 }
 
 /* Media Queries */
+@media screen and (max-width: 990px){
+  h1 {
+    font-size:7vw;
+  }
 
-@media and screen (max-width:1200px){
-  body {
-    color: white;
+  #instructions {
+    font-size:3vw;
+  }
+ .case, .case-opened {
+   width: 13vw;
+   margin-bottom: 0;
+ }
+
+ .rectangle {
+   background:none;
+   display:inline-block;
+   width:auto;
+   height:auto;
+ }
+
+ .text {
+   font-size:4vw;
+ }
+
+ .board {
+   width: 100%;
+ }
+
+ .board-row {
+   display:flex;
+   justify-content: space-around;
+ }
+
+}
+
+@media screen and (max-width: 1200px) {
+    .board-row {
+      /*display:flex;
+      justify-content: space-between;*/
+    }
+    .col-md-2 {
+      padding-right:0.5em;
+      padding-left:0.5em;
+    }
+}
+
+@media screen and (min-width: 1550px){
+  /* fix case cover/contain issue */
+  .case, .case-opened {
+    background-size: contain;
   }
 }
