--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,7 @@
 html, body {
   font-family: 'Saira', sans-serif;
   font-size:16px;
-  margin:2rem;
   color:white;
-
   background: #232526;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -127,6 +125,7 @@ h2 {
   display:flex;
   flex-direction:column;
   justify-content: space-evenly;
+  margin:4rem;
 }
 
 #instructions {
@@ -144,12 +143,12 @@ h2 {
   opacity: 0.5;
 }
 #mine {
-  left: 5%;
+  left: 4rem;
   text-align: center;
 }
 
 #offer {
-  right: 5%;
+  right: 4rem;
 }
 
 #offer:hover, #mine:hover {
