--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ html, body {
 
 }
 
-
 header {
-  margin-bottom: 7vh;
+  margin-top: 8vh;
 }
 
 footer {
@@ -25,7 +24,7 @@ h1 {
 }
 
 h2 {
-  font-size:2vw;
+  font-size:2em;
 }
 
 .howie {
@@ -123,8 +122,18 @@ h2 {
   display:flex;
   flex-direction:column;
   justify-content: space-evenly;
-  margin:4rem;
+  /*margin:4rem;*/
+  margin-top:4rem;
 }
+
+.low-numbers, #mine {
+  margin-left:4rem;
+}
+
+.high-numbers {
+  margin-right:4rem;
+}
+
 
 #instructions {
   margin: 0 auto;
@@ -136,14 +145,11 @@ h2 {
   top: 5%;
   border:1px solid white;
   height: 8.5em;
-  width:12%;
+  width: 14.5%;
   text-align: center;
   opacity: 0.5;
 }
-#mine {
-  left: 4rem;
-  text-align: center;
-}
+
 
 #offer {
   right: 4rem;
@@ -190,17 +196,54 @@ h2 {
 }
 
 /* Media Queries */
+@media (min-width: 990px){
+  .col-md-2 {
+    width:18%;
+  }
+  .low-numbers, .high-numbers {
+    margin-top:4rem;
+    margin-bottom:0;
+  }
+  .low-numbers {
+    margin-left:4em;
+  }
+  .high-numbers {
+    margin-right:4em;
+  }
+  .board {
+    margin-top:4em;
+  }
+}
+
+
 @media screen and (max-width: 990px){
+  header {
+    margin-bottom:3em;
+    margin-top:5vh;
+  }
+
+  .rectangle {
+    padding:0.5em;
+    margin:0;
+  }
+
   h1 {
     font-size:7vw;
+    margin-top:4vw;
   }
 
   #instructions {
-    font-size:3vw;
+    font-size:1.2rem;
+    width:55%;
   }
- .case, .case-opened {
+
+ .case, .case-opened, .case-selected {
    width: 13vw;
    margin-bottom: 0;
+ }
+
+ .case-selected {
+   margin: 0 auto;
  }
 
  .rectangle {
@@ -216,6 +259,11 @@ h2 {
 
  .board {
    width: 100%;
+   margin: 2em auto;
+ }
+
+ .row {
+   margin-top:0;
  }
 
  .board-row {
@@ -223,17 +271,36 @@ h2 {
    justify-content: space-around;
  }
 
+ #mine, #offer {
+   width:20%;
+ }
+
+ #mine {
+   left: 1rem;
+   margin:0;
+ }
+
+ #offer {
+   right:1rem;
+   margin:0;
+ }
+
+ .moola {
+   font-size:4vw;
+ }
+
+}
+
+@media screen and (max-width: 1500px) {
 }
 
 @media screen and (max-width: 1200px) {
-    .board-row {
-      /*display:flex;
-      justify-content: space-between;*/
-    }
+
     .col-md-2 {
       padding-right:0.5em;
       padding-left:0.5em;
     }
+
 }
 
 @media screen and (min-width: 1550px){
