--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,6 @@ h2 {
   display:flex;
   flex-direction:column;
   justify-content: space-evenly;
-  /*margin:4rem;*/
   margin-top:4rem;
 }
 
@@ -173,8 +172,9 @@ h2 {
   margin-bottom:1em;
   text-align:center;
   color:black;
-  display:flex;
-  justify-content: space-evenly;
+  /*display:flex;*/
+  display:-webkit-flex;
+  justify-content: center;
 }
 
 @keyframes blinker {
@@ -291,8 +291,8 @@ h2 {
 
 }
 
-@media screen and (max-width: 1500px) {
-}
+/*@media screen and (max-width: 1500px) {
+}*/
 
 @media screen and (max-width: 1200px) {
 
