--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 html, body {
   font-family: 'Saira', sans-serif;
   font-size:16px;
@@ -59,6 +57,16 @@ h2 {
 .case {
   cursor:pointer;
 }
+
+.case:hover {
+  animation: pulse 0.5s ease-in infinite;
+}
+
+@keyframes pulse{
+  25%  {transform: scale(0.9);}
+  75%  {transform: scale(1.1);}
+}
+
 
 .case-opened {
   position: relative;
@@ -134,6 +142,13 @@ h2 {
   margin-right:4rem;
 }
 
+button:hover {
+  animation: pop 0.3s linear 1;
+}
+
+@keyframes pop{
+  50%  {transform: scale(1.2);}
+}
 
 #instructions {
   margin: 0 auto;
@@ -153,6 +168,10 @@ h2 {
 
 #offer {
   right: 4rem;
+}
+
+#offer:hover {
+  cursor: pointer;
 }
 
 #offer:hover, #mine:hover {
@@ -198,6 +217,7 @@ h2 {
 
 /* Media Queries */
 @media (min-width: 990px){
+
   .col-md-2 {
     width:18%;
   }
@@ -218,6 +238,10 @@ h2 {
 
 
 @media screen and (max-width: 990px){
+  .reveal {
+    height:15rem;
+  }
+
   header {
     margin-bottom:3em;
     margin-top:5vh;
