added background styling to mycase and offer divs

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,16 @@ html, body {
   font-family: 'Saira', sans-serif;
   font-size:16px;
   color:white;
-  background: #232526;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   height:100vh;
+
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #232526, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #232526, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /*
+  background-image: url('../images/black-background.jpg');
+  background-size: cover;
+  */
 
 }
 
@@ -15,6 +21,26 @@ header {
 
 footer {
 }
+
+.logo{
+    text-align:center;
+	  width: 40%;
+	  height: 100%;
+    margin: auto;
+    /*background-image: url('../images/logo.jpg');
+    background-size:cover;*/
+    /*background-color:black;*/
+
+
+
+	  /*border: 5px solid transparent;
+
+	  -moz-border-image: -moz-linear-gradient(top left, #C9AA69 0%, #B27618 50%, #D6AB4C 100%);
+	  -webkit-border-image: -webkit-linear-gradient(top left, #C9AA69 0%, #B27618 50%, #D6AB4C 100%);
+	  border-image: linear-gradient(to bottom right, #C9AA69 0%, #B27618 50%, #D6AB4C 100%);
+
+	  border-image-slice: 1;*/
+	}
 
 h1 {
   font-size:3rem;
@@ -163,6 +189,15 @@ button:hover {
   width: 14.5%;
   text-align: center;
   opacity: 0.5;
+  background:
+    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+    background-size: 20px 20px;
 }
 
 
