--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,15 @@ header {
 footer {
 }
 
-.logo{
+
+.logo {
     text-align:center;
-	  width: 40%;
+	  width: 100%;
 	  height: 100%;
     margin: auto;
-    /*background-image: url('../images/logo.jpg');
-    background-size:cover;*/
+    background-image: url('../images/dond.jpg');
+    background-size:cover;
     /*background-color:black;*/
-
-
 
 	  /*border: 5px solid transparent;
 
@@ -189,7 +188,7 @@ button:hover {
   width: 14.5%;
   text-align: center;
   opacity: 0.5;
-  background:
+  /*background:
     linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
     linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
     linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
@@ -197,7 +196,7 @@ button:hover {
     linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
     linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
     background-color: #131313;
-    background-size: 20px 20px;
+    background-size: 20px 20px;*/
 }
 
 
